fix: adjust margin for better alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -146,8 +146,8 @@ a {
     text-transform: uppercase;
     letter-spacing: 1px;
     text-align: center;
-    padding: 20px;
-    margin-bottom: -22px;
+    padding: 15px;
+    margin-bottom: -5;
 }
 
 .hero-section-wrapper h1 {
